# 3D-Reconstruction

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
Dependencies/Geometry/: Shape.cpp  Shape.h
Utility/: GLInclude.h
Utility/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
Utility/Timer/: Timer.h
shader/: depth.vert  phong.frag  phong.vert
src/App/: App.cpp  App.h
src/ColorMapper/: ColorMapper.cpp  ColorMapper.h
src/Renderer/: Renderer.cpp  Renderer.h
